@@ -179,6 +179,8 @@ unsigned encode_line(struct encoder_ctx *ctx, unsigned char *buffer, unsigned ch
 			bytes += 2;
 			buffer += 2;
 			break;
+		case CCX_ENC_ASCII: // Consider to remove ASCII encoding or write some code here
+			break;
 		}
 		text++;
 	}
@@ -314,6 +316,8 @@ unsigned get_decoder_line_encoded(struct encoder_ctx *ctx, unsigned char *buffer
 		case CCX_ENC_UNICODE:
 			get_char_in_unicode(buffer, line[i]);
 			bytes = 2;
+			break;
+		case CCX_ENC_ASCII: // Consider to remove ASCII encoding or write get_char_in_ascii(...)
 			break;
 		}
 		buffer += bytes;
